# game

./: .gitignore  CMakeLists.txt  README.md  game.cpp  test.tmx
config/: AnimConfig.cpp  EnemyConfig.cpp  PlayerConfig.cpp  WindowConfig.hpp
maps/: dantuinMap.tmx  testMap.tmx
src/: Enemy.cpp  Enemy.h
src/Animation/: Animation.cpp  Animation.hpp
src/AnimationManager/: AnimationManager.cpp  AnimationManager.hpp
src/Bullet/: Bullet.cpp  Bullet.h
src/Bullets/: Bullets.cpp  Bullets.h
src/Clone/: Clone.cpp  Clone.h
src/Dynamic/: Dynamic.cpp  Dynamic.h
src/Enemy/: Enemy.h
src/EnemyManager/: EnemyManager.h
src/Game/: Game.cpp  Game.h
src/GameManager/: GameManager.cpp  GameManager.h
src/Level/: Level.cpp  Level.h  test.tmx
src/Menu/: Menu.cpp  Menu.h
src/Player/: Player.cpp  Player.h  PlayerAnimations.xml
src/Screen/: Screen.h
textures/: CloneAnimations.xml  PlayerAnimations.xml
